Fix Spacing & Font Weight

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,27 +30,33 @@ nav a:active {
 
 p {
   color: #344563;
+  margin: 0;
 }
 
 h1 {
+  margin: 0;
   color: #172b4d;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+h2 {
+  margin: 0;
+  color: #172b4d;
+  font-size: 32px;
+  font-weight: 700;
 }
 
 .headline {
   border-bottom-left-radius: 80px;
   background-color: white;
-  margin-bottom: 100px;
-  padding: 15% 5% 20%;
+  padding: 114px 5%;
   display: flex;
+  gap: 20px;
   flex-direction: column;
   background-image: url(../images/header-background-mobile.svg);
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.headline-text {
-  font-size: 40px;
-  font-weight: bold;
 }
 
 .sub-heading {
@@ -66,6 +72,7 @@ h1 {
 
 .works-section {
   display: grid;
+  padding: 114px 0;
 }
 
 .card {
@@ -76,6 +83,7 @@ h1 {
   border-radius: 16px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
   background-color: white;
   font-size: 15px;
 }
@@ -86,7 +94,7 @@ h1 {
 
 .project-details {
   display: flex;
-  font-weight: bold;
+  font-weight: 600;
   align-items: center;
   font-size: 13px;
 }
@@ -98,9 +106,11 @@ h1 {
 }
 
 .tags-section {
+  margin: 0;
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  gap: 10px;
 }
 
 .tag {
@@ -109,7 +119,7 @@ h1 {
   padding: 4px 12px 4px;
   color: #6070ff;
   background-color: #ebebff;
-  margin-right: 10px;
+  font-weight: 500;
 }
 
 .alignment-start {
@@ -117,10 +127,9 @@ h1 {
 }
 
 .button {
-  margin-top: 15px;
   font-size: 17px;
   color: #6070ff;
-  font-weight: bold;
+  font-weight: 500;
   padding: 15px 10px 15px;
   border-radius: 8px;
   border-style: solid;
@@ -161,9 +170,9 @@ h1 {
 .about-section {
   border-top-right-radius: 80px;
   background-color: white;
-  margin-top: 100px;
-  padding: 15% 5% 15%;
+  padding: 114px 5%;
   display: flex;
+  gap: 20px;
   flex-direction: column;
 }
 
@@ -207,8 +216,9 @@ li img {
 .contact-section {
   border-top-left-radius: 80px;
   background-color: #6070ff;
-  padding: 15% 5% 15%;
+  padding: 114px 5% 40px;
   display: flex;
+  gap: 20px;
   flex-direction: column;
   align-items: center;
   background-image: url(../images/contact-form-background.svg);
@@ -220,6 +230,10 @@ li img {
 .contact-section p {
   color: white;
   text-align: center;
+}
+
+.contact-section p {
+  font-size: 20px;
 }
 
 .contact-form {
